--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^14.6.3",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.4",
     "typescript": "^4.0.2"
