--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "stats---typescript-course",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "start:build": "tsc -w",
-    "start:run": "nodemon build/index.js",
+    "start:run": "nodemon",
     "start": "concurrently -p \"[{name}]\" -n \"TSC,NodeMon\" \"npm:start:*\" --kill-others"
   },
   "keywords": [],
